--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "12.0.4",
+    "next-auth": "^4.0.0-beta.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
