feat: Use next-auth v3

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,5 @@
 NEXTAUTH_URL=http://localhost:3000
 EMAIL_SERVER=smtp://username:password@smtp.example.com.com:587
-EMAIL_FROM=AlterCLass <no-reply@example.com>
+EMAIL_FROM=no-reply@example.com
 FAUNA_SECRET_KEY=<YOUR_SECRET_KEY>
 FAUNA_DOMAIN=<YOUR_CONNECTION_DOMAIN>
