feat: Create custom emails for verification request + welcome + some bug fixes

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,8 @@
 NEXTAUTH_URL=http://localhost:3000
-EMAIL_SERVER=smtp://username:password@smtp.example.com.com:587
+EMAIL_SERVER_HOST=smtp.example.com.com
+EMAIL_SERVER_PORT=465
+EMAIL_SERVER_USER=<YOUR_SMTP_USER>
+EMAIL_SERVER_PASSWORD=<YOUR_SMTP_PASSWORD>
 EMAIL_FROM=no-reply@example.com
 FAUNA_SECRET_KEY=<YOUR_SECRET_KEY>
 FAUNA_DOMAIN=<YOUR_CONNECTION_DOMAIN>
