--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@heroicons/react": "^1.0.5",
     "@next-auth/fauna-adapter": "^0.2.4",
     "faunadb": "^4.4.1",
+    "handlebars": "^4.7.7",
     "next": "12.0.4",
     "next-auth": "^3.29.0",
+    "nodemailer": "^6.7.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hot-toast": "^2.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
