--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,5 @@
 NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=<YOUR_SECRET_STRING>
 EMAIL_SERVER_HOST=smtp.example.com.com
 EMAIL_SERVER_PORT=465
 EMAIL_SERVER_USER=<YOUR_SMTP_USER>
